platform/gateway-api/base/httproutes/argo-rollouts-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-rollouts-route
  namespace: argo-rollouts
spec:
  parentRefs:
  - name: platform-gateway
    namespace: nginx-gateway

  hostnames:
  - rollouts.stackcouture.online

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /rollouts

    backendRefs:
    - name: argo-rollouts-dashboard
      port: 3100

  - matches:
    - path:
        type: PathPrefix
        value: /api

    backendRefs:
    - name: argo-rollouts-dashboard
      port: 3100
