platform/gateway-api/base/httproutes/resulthttproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: result-route
  namespace: vote
  labels:
    environment: dev
spec:
  parentRefs:
  - name: platform-gateway
    namespace: nginx-gateway

  hostnames:
  - result.stackcouture.online

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /

    backendRefs:
    - name: result-active-svc
      port: 80
