platform/gateway-api/base/httproutes/votehttproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vote-route
  namespace: vote
  labels:
    environment: dev
spec:
  parentRefs:
  - name: platform-gateway
    namespace: nginx-gateway

  hostnames:
  - vote.stackcouture.online

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /

    backendRefs:
    - name: vote-stable
      port: 80
